--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.symplifier.libs</groupId>
-    <artifactId>sym.net-persistent-state</artifactId>
+    <artifactId>sym.net-state-server</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
   <build>
